<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp05"
        android:background="@color/color_f0f2f5" />

    <TextView
        android:id="@+id/txtGallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/from_gallery_select"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp6"
        android:background="@color/color_f0f2f5" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp16" />
</LinearLayout>