<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_common_dialog_bg"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/dialogContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginBottom="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="1"
                android:background="@drawable/selector_common_dialog_txt_left_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_0084ff"
                android:textSize="@dimen/sp18"
                />


            <TextView
                android:id="@+id/txt_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_weight="1"
                android:background="@drawable/selector_common_dialog_txt_right_bg"
                android:gravity="center"
                android:text="@string/determine"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp18"
                 />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:background="@drawable/selector_common_dialog_txt_center_bg"
            android:gravity="center"
            android:text="@string/i_know"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp18"
            android:visibility="gone" />
    </RelativeLayout>


</LinearLayout>